# qubic-contract-verify

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  action.yml  entrypoint.sh
.github/workflows/: build-and-test-multi-platform.yml  cmake-multi-platform.yml  publish.yml  test_contract_verify_action.yml
src/: CMakeLists.txt  check_compliance.cpp  check_compliance.h  qubic_contract_verify.cpp
src/lib/: check_branching_looping.cpp  check_branching_looping.h  check_compliance.cpp  check_compliance.h  check_expressions.cpp  check_expressions.h  check_functionlike.cpp  check_functionlike.h  check_names_and_types.cpp  check_names_and_types.h  check_variables.cpp  check_variables.h  defines.h
test/: CMakeLists.txt  contract_verify_test.cpp
test/testfiles/: test_fail_allocation_new.h  test_fail_array_declaration.h  test_fail_array_indexing.h  test_fail_char_literal.h  test_fail_const_cast.h  test_fail_constructor.h  test_fail_dereferencing_arrow.h  test_fail_dereferencing_arrow_star.h  test_fail_destructor.h  test_fail_div.h  test_fail_global_const.h  test_fail_global_constant.h  test_fail_global_function.h  test_fail_global_variable.h  test_fail_input_output_0.h  test_fail_input_output_1.h  test_fail_input_output_10.h  test_fail_input_output_11.h  test_fail_input_output_12.h  test_fail_input_output_13.h  test_fail_input_output_2.h  test_fail_input_output_3.h  test_fail_input_output_4.h  test_fail_input_output_5.h  test_fail_input_output_6.h  test_fail_input_output_7.h  test_fail_input_output_8.h  test_fail_input_output_9.h  test_fail_local_variable.h  test_fail_mod.h  test_fail_name_compound.h  test_fail_name_param.h  test_fail_name_var.h  test_fail_oracle_notification_input.h  test_fail_parameter_pack.h  test_fail_pointer_declaration.h  test_fail_pointer_dereferencing.h  test_fail_restricted_function_call.h  test_fail_restricted_variable.h  test_fail_scope_resolution_function_call.h  (+44 more)
test/testfiles/oracle_interfaces/: test_fail_forbidden_locals_type.h  test_fail_too_many_locals.h  test_ok_DogeShareValidation.h
